--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
+    "dayjs": "^1.11.7",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.10",
