--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-toolkit",
+  "homepage": "https://Sergey-Saprankov/todo-toolkit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
+    "gh-pages": "^5.0.0",
     "dayjs": "^1.11.7",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
