--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-toolkit",
-  "homepage": "https://Sergey-Saprankov/todo-toolkit",
+  "homepage": "https://Sergey-Saprankov.github.io/todo-toolkit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
