--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "todo-toolkit",
-  "homepage": "https://sergey-saprankov.github.io/todo-toolkit",
+  "homepage": "https://Sergey-Saprankov/todo-toolkit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -12,15 +13,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.10",
-    "@hookform/resolvers": "^2.9.10",
     "antd": "^5.1.7",
     "axios": "^1.2.6",
+    "dayjs": "^1.11.7",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
-    "gh-pages": "^5.0.0",
-    "dayjs": "^1.11.7",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.10",
