--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-toolkit",
+  "name": "it-incubator-todolist-ts",
   "homepage": "https://Sergey-Saprankov.github.io/todo-toolkit",
   "version": "0.1.0",
   "private": true,
