--- a/package.json
+++ b/package.json
@@ -1,55 +1,1 @@
-{
-  "name": "it-incubator-todolist-ts",
-  "homepage": "https://Sergey-Saprankov.github.io/todo-toolkit",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
-    "@reduxjs/toolkit": "^1.9.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.10",
-    "antd": "^5.1.7",
-    "axios": "^1.2.6",
-    "dayjs": "^1.11.7",
-    "gh-pages": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "router-dom": "^2.2.10",
-    "sass": "^1.57.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "prettier": "^2.8.3"
-  }
-}
+{"name":"it-incubator-todolist-ts","homepage":"https://Sergey-Saprankov.github.io/todo-toolkit","version":"0.1.0","private":true,"dependencies":{"@hookform/resolvers":"^2.9.10","@reduxjs/toolkit":"^1.9.2","@testing-library/jest-dom":"^5.14.1","@testing-library/react":"^13.0.0","@testing-library/user-event":"^13.2.1","@types/jest":"^27.0.1","@types/node":"^16.7.13","@types/react":"^18.0.0","@types/react-dom":"^18.0.10","antd":"^5.1.7","axios":"^1.2.6","dayjs":"^1.11.7","gh-pages":"^5.0.0","react":"^18.2.0","react-dom":"^18.2.0","react-hook-form":"^7.43.0","react-redux":"^8.0.5","react-router-dom":"^6.8.0","react-scripts":"5.0.1","router-dom":"^2.2.10","sass":"^1.57.1","typescript":"^4.4.2","web-vitals":"^2.1.0","yup":"^0.32.11"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject","predeploy":"npm run build","deploy":"gh-pages -d build"},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"@typescript-eslint/eslint-plugin":"^5.33.1","eslint-import-resolver-typescript":"^3.5.0","@typescript-eslint/parser":"^5.33.1","eslint":"^8.32.0","eslint-config-it-incubator":"^1.0.10","eslint-config-prettier":"^8.5.0","eslint-plugin-import":"^2.25.2","eslint-plugin-prettier":"^4.2.1","eslint-plugin-react":"^7.30.1","prettier":"^2.7.1","prettier-config-it-incubator":"^1.0.1","prettier-stylelint":"^0.4.2","stylelint":"^14.10.0","stylelint-config-clean-order":"^0.9.0","stylelint-prettier":"^2.0.0","eslint-import-resolver-node":"^0.3.6"}}
